Sprinkly constexpr liberally

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -26,6 +26,8 @@ Changes in P1950r2
 
 * Add allocator support.
 
+* `constexpr` support.
+
 Changes in P1950r1
 
 * Add design discussion.
@@ -500,13 +502,13 @@ template <class T> struct copier_traits;
 template <class T, class C = std::default_copy<T>, class D = typename std::copier_traits<C>::deleter_type> class indirect_value;
 
 template <class T, class ...Ts> 
-  indirect_value<T> make_indirect_value(Ts&& ...ts); 
+  constexpr indirect_value<T> make_indirect_value(Ts&& ...ts); 
 
 template <class T, class A = std::allocator<T>, class... Ts>
-  indirect_value<T> allocate_indirect_value(std::allocator_arg_t, A& a, Ts&&... ts); 
+  constexpr indirect_value<T> allocate_indirect_value(std::allocator_arg_t, A& a, Ts&&... ts); 
 
 template<class T>
-  void swap(indirect_value<T>& p, indirect_value<T>& u) noexcept;
+  constexpr void swap(indirect_value<T>& p, indirect_value<T>& u) noexcept;
 ```
 
 ## X.X Class template `copier_traits` [copier.traits]
@@ -529,14 +531,14 @@ namespace std {
     template <class T>
     struct default_copy {
         using deleter_type = default_delete<T>;
-        T* operator()(const T& t) const;
+        constexpr T* operator()(const T& t) const;
     };
 } // namespace std
 ```
 The class template default_copy [J. Coe] serves as the default copier for the class template `indirect_value`.
 The template parameter <code>T</code> of <code>default_copy</code> may be an incomplete type.
 
-<code>T* operator()(const T& t) const;</code>
+<code>constexpr T* operator()(const T& t) const;</code>
 * Returns: <code>new T(t);</code>
 
 ## X.Z Class template `indirect_value` [indirect_value]
@@ -569,42 +571,42 @@ A copier and deleter are said to be present if a `indirect_value` object is cons
 
         // Constructors
         constexpr indirect_value() noexcept;
-        explicit indirect_value(T* p, C c=C{}, D d=D{});
+        constexpr explicit indirect_value(T* p, C c=C{}, D d=D{});
 
-        indirect_value(const indirect_value& p);
-        indirect_value(indirect_value&& p) noexcept;
+        constexpr indirect_value(const indirect_value& p);
+        constexpr indirect_value(indirect_value&& p) noexcept;
 
         template <class ...Ts>
-        indirect_value(std::in_place_t, Ts&&... ts);  // See below
+        constexpr indirect_value(std::in_place_t, Ts&&... ts);  // See below
 
         // Destructor
-        ~indirect_value();
+        constexpr ~indirect_value();
 
         // Assignment
-        indirect_value& operator=(const indirect_value& p);
-        indirect_value& operator=(indirect_value&& p) noexcept;
+        constexpr indirect_value& operator=(const indirect_value& p);
+        constexpr indirect_value& operator=(indirect_value&& p) noexcept;
 
         // Modifiers
-        void swap(indirect_value<T>& p) noexcept;
+        constexpr void swap(indirect_value<T>& p) noexcept;
 
         // Observers
-        T& operator*();
-        T* operator->();
-        const T& operator*() const;
-        const T* operator->() const;
-        explicit operator bool() const noexcept;
+        constexpr T& operator*();
+        constexpr T* operator->();
+        constexpr const T& operator*() const;
+        constexpr const T* operator->() const;
+        constexpr explicit operator bool() const noexcept;
     };
 
     // indirect_value creation
-    template <class T, class ...Ts> indirect_value<T>
-    make_indirect_value(Ts&& ...ts);  // See below
+    template <class T, class ...Ts>
+    constexpr indirect_value<T> make_indirect_value(Ts&& ...ts);  // See below
 
     template <class T, class A = std::allocator<T>, class... Ts>
-    indirect_value<T> allocate_indirect_value(std::allocator_arg_t, A& a, Ts&&... ts); 
+    constexpr indirect_value<T> allocate_indirect_value(std::allocator_arg_t, A& a, Ts&&... ts); 
 
     // indirect_value specialized algorithms
     template<class T>
-    void swap(indirect_value<T>& p, indirect_value<T>& u) noexcept;
+    constexpr void swap(indirect_value<T>& p, indirect_value<T>& u) noexcept;
 
 } // end namespace std
 
@@ -616,36 +618,36 @@ A copier and deleter are said to be present if a `indirect_value` object is cons
 * Effects: Constructs an empty `indirect_value`.
 * Postconditions: `bool(*this) == false`.
 
-<code>explicit indirect_value(T* p, C c=C{}, D d=D{});</code>
+<code>constexpr explicit indirect_value(T* p, C c=C{}, D d=D{});</code>
 * Effects: Constructs a `indirect_value` which owns p, initializing the stored pointer with p. The copier and deleter of the `indirect_value` constructed are moved from `c` and `d`. If `p` is null, creates an empty object.
 * Constraints: `is_nothrow_move_assignable_v<C>` is true. `is_nothrow_move_assignable_v<D>` is true.
 * Preconditions: `C` and `D` meet the <i>Cpp17CopyConstructible</i> requirements. If the arguments `c` and/or `d` are not supplied, then `C` and/or `D` respectively are default constructible types that are not pointer types. If `p` is non-null then the expression `c(*p)` returns a non-null `T*` is as if copy constructed from *p. The expression `d(p)` has well-defined behaviour, and does not throw exceptions.
 * Postconditions: `bool(*this) == bool(p)`.
 * Mandates: The expression `d(p)` is well-formed.
 
-<code>indirect_value(const indirect_value& p);</code>
+<code>constexpr indirect_value(const indirect_value& p);</code>
 * Constraints: `is_copy_constructible_v<T>` is true.
 * Effects: Creates a `indirect_value` object that owns a copy of the object managed by `p`. The copy is created by the copier in `p`. If `p` has a custom copier and deleter then the custom copier and deleter of the `indirect_value` constructed are copied from those in `p`.
 * Remarks: The constructor must work with pointer to an complete type `T`.
 * Throws: Any exception thrown by the copier or `bad_alloc` if required storage cannot be obtained.
 * Postconditions: `bool(*this) == bool(p)`.
 
-<code>indirect_value(indirect_value&& p) noexcept;</code>
+<code>constexpr indirect_value(indirect_value&& p) noexcept;</code>
 * Effects: Move-constructs an `indirect_value` instance from `p`. If `p` has a custom copier and deleter then the copier and deleter of the `indirect_value` constructed are the same as those in `p`.
 * Postconditions: `*this` contains the old value of `p`. `p` is empty.
 
-<code>indirect_value(std::in_place_t, Ts&& ...ts);</code>
+<code>constexpr indirect_value(std::in_place_t, Ts&& ...ts);</code>
 * Effects: Constructs an `indirect_value` which owns an object of type `T` direct-non-list-initialized with `std::forward<Ts>(ts)...`
 * Throws: Any exception thrown by the selected constructor of `T` or `bad_alloc` if required storage cannot be obtained.
 * Preconditions: `is_same_v<C, default_copy> && is_same_v<D, default_delete>`.
 
 ### X.Z.4 Class template `indirect_value` destructor [indirect_value.dtor]
-<code>~indirect_value();</code>
+<code>constexpr ~indirect_value();</code>
 * Effects: If `*this` there are no effects. If a custom deleter `d` is present then `d(p)` is called and the copier and deleter are destroyed. Otherwise the destructor of the managed object is called.
 * Remarks: The constructor must work with pointer to an complete type `T`.
 
 ### X.Z.5 Class template `indirect_value` assignment [indirect_value.assignment]
-<code>indirect_value& operator=(const indirect_value& p);</code>
+<code>constexpr indirect_value& operator=(const indirect_value& p);</code>
 * Constraints: `is_copy_assignable_v<C>` is true. `is_copy_assignable_v<D>` is true.
 * Effects: If `p` is empty, assigns an empty object. Otherwise creates an object that owns a copy of the object managed by `p`. The copy is created by the copier in `p`, and the copier and deleter of `*this` are copied from those in `p`.
 * Remarks: The function must work with pointer to an complete type `T`.
@@ -653,7 +655,7 @@ A copier and deleter are said to be present if a `indirect_value` object is cons
 * Returns: `*this`.
 * Postconditions: `bool(*this) == bool(p)`.
 
-<code>indirect_value& operator=(indirect_value&& p) noexcept;</code>
+<code>constexpr indirect_value& operator=(indirect_value&& p) noexcept;</code>
 * Constraints: `is_nothrow_move_assignable_v<C>` is true. `is_nothrow_move_assignable_v<D>` is true.
 * Effects: Ownership of the resource managed by `p` is transferred to this. If `p` has a custom copier and deleter then the copier and deleter of `*this` is the same as those in `p`.
 * Remarks: The function must work with pointer to an complete type `T`.
@@ -661,32 +663,32 @@ A copier and deleter are said to be present if a `indirect_value` object is cons
 * Postconditions: `*this` contains the old value of `p`. `p` is empty.
 
 ### X.Z.6 Class template `indirect_value` modifiers [indirect_value.modifiers]
-<code>void swap(indirect_value<T>& p) noexcept;</code>
+<code>constexpr void swap(indirect_value<T>& p) noexcept;</code>
 * Effects: Exchanges the contents of `p` and `*this`.
 
 ### X.Z.7 Class template `indirect_value` observers [indirect_value.observers]
 ```
-T& operator*();
-const T& operator*() const;
+constexpr T& operator*();
+constexpr const T& operator*() const;
 ```
 * Preconditions: `bool(*this)` is true.
 * Returns: A reference to the owned object.
 
 ```
-T* operator->() noexcept;
-const T* operator->() const noexcept;
+constexpr T* operator->() noexcept;
+constexpr const T* operator->() const noexcept;
 ```
 * Preconditions: `bool(*this)` is true.
 * Returns: A pointer to the owned object.
 
-<code>explicit operator bool() const noexcept;</code>
+<code>constexpr explicit operator bool() const noexcept;</code>
 * Returns: false if the `indirect_value` is empty, otherwise true.
 
 ### X.Z.8 Class template `indirect_value` creation [indirect_value.creation]
 
 ```cpp
 template <class T, class U=T, class ...Ts>
-indirect_value<T> make_indirect_value(Ts&& ...ts);
+constexpr indirect_value<T> make_indirect_value(Ts&& ...ts);
 ```
 
 * Constraints: `is_constructible_v<U, Ts...>` is true.
@@ -696,7 +698,7 @@ indirect_value<T> make_indirect_value(Ts&& ...ts);
 
 ```cpp
 template <class T, class U = T, class A = std::allocator<U>, class... Ts>
-indirect_value<T> allocate_indirect_value(std::allocator_arg_t, A& a, Ts&&... ts); 
+constexpr indirect_value<T> allocate_indirect_value(std::allocator_arg_t, A& a, Ts&&... ts); 
 ```
 
 * Constraints: `is_constructible_v<U, Ts...>` is true.
