Assorted edits pre-Kona draft (#112)
* Remove note that suggests a SBO

* Fix link to source

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -7,7 +7,7 @@ Audience: LEWG
 Status: P
 Group: WG21
 Issue Tracking: GitHub https://github.com/jbcoe/indirect_value/issues
-!Source: <a href="https://github.com/jbcoe/indirect_value/documentation/p1950.md">github.com/jbcoe/indirect_value/documentation/p1950.md</a>
+!Source: <a href="https://github.com/jbcoe/indirect_value/blob/main/documentation/p1950.md">https://github.com/jbcoe/indirect_value/blob/main/documentation/p1950.md</a>
 No Abstract: yes
 Markup Shorthands: markdown yes
 Markup Shorthands: biblio yes
@@ -558,8 +558,6 @@ The template parameter `T` of `indirect_value` must be a non-union class type.
 The template parameter `T` of `indirect_value` may be an incomplete type.
 
 A copier and deleter are said to be present if a `indirect_value` object is constructed from a non-null pointer, or from a `indirect_value` object where a copier and deleter are present.
-
-*[Note: Implementations are encouraged to avoid the use of dynamic memory for ownership of small objects.]*
 
 ### X.Z.2 Class template `indirect_value` synopsis [indirect_value.synopsis]
 
