Remove parameter U, this is applicable to the Polymorphic case

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -2,7 +2,7 @@
 Title:  <code>indirect_value</code>: A Free-Store-Allocated Value Type For C++
 Shortname: P1950
 URL: https://wg21.link/P1950
-Revision: 1
+Revision: 2
 Audience: LEWG
 Status: P
 Group: WG21
@@ -685,22 +685,22 @@ constexpr const T* operator->() const noexcept;
 ### X.Z.8 Class template `indirect_value` creation [indirect_value.creation]
 
 ```cpp
-template <class T, class U=T, class ...Ts>
+template <class T, class ...Ts>
 constexpr indirect_value<T> make_indirect_value(Ts&& ...ts);
 ```
 
-* Constraints: `is_constructible_v<U, Ts...>` is true.
-* Preconditions: `U` meets the `Cpp17CopyConstructible` requirements.
+* Constraints: `is_constructible_v<T, Ts...>` is true.
+* Preconditions: `T` meets the `Cpp17CopyConstructible` requirements.
 * Returns: A `indirect_value<T>` owning an object of type direct-non-list-initialized with `std::forward<Ts>(ts)...`.
 * Preconditions: `is_same_v<C, default_copy> && is_same_v<D, default_delete>`.
 
 ```cpp
-template <class T, class U = T, class A = std::allocator<U>, class... Ts>
+template <class T, class A = std::allocator<U>, class... Ts>
 constexpr indirect_value<T> allocate_indirect_value(std::allocator_arg_t, A& a, Ts&&... ts); 
 ```
 
-* Constraints: `is_constructible_v<U, Ts...>` is true.
-* Preconditions: `U` meets the `Cpp17CopyConstructible` requirements.
+* Constraints: `is_constructible_v<T, Ts...>` is true.
+* Preconditions: `T` meets the `Cpp17CopyConstructible` requirements.
 * Returns: A `indirect_value<T>` owning an object of type direct-non-list-initialized with `std::forward<Ts>(ts)...`.
 * Preconditions `is_same_v<C, allocator_copy> && is_same_v<D, allocator_delete>`.
 
